# meeting-ai

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_pipeline.py
.github/workflows/: ci.yml
benchmark/: results.json
datasets/: benchmark.json  processed.json
docs/: index.html
prompts/: extraction_v1.md
src/meeting_ai/: __init__.py  api.py  evaluate.py  extractor.py  models.py  store.py
tests/: test_api.py  test_extractor.py  test_store.py
