[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fathom-plus-plus"
version = "0.1.0"
description = "Evidence-grounded meeting intelligence and LLM evaluation platform"
requires-python = ">=3.10"
dependencies = ["fastapi>=0.115,<1", "uvicorn[standard]>=0.34,<1", "pydantic>=2.11,<3"]

[tool.setuptools.packages.find]
where = ["src"]
